[metadata]
name = hello
version = 0.0.0
description = Example project supporting both a system installable CMake project and a pip-installable pybind11 wrapper
author = Kaleb Barrett
author_email = dev.ktbarrett@gmail.com

# these define "extra" requirement targets
# we add the documentation requirements here so both users and ReadTheDocs can easily
# install the documentation build requirements
[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    breathe
